cluster/core/kube-system/dex-k8s-authenticator/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_ID_1}.cfargotunnel.com"
  name: dex-k8s-authenticator
  namespace: kube-system
spec:
  ingressClassName: traefik
  rules:
    - host: "login.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: dex-k8s-authenticator
                port:
                  number: 5555
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "login.${SECRET_DOMAIN}"
